<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/polaroid_photos_image"
            app:layout_constraintBottom_toBottomOf="@id/topLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_serif_regular"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toTopOf="@id/topLine" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            style="@style/TextInputField"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_huge"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usernameEditText"
            android:layout_width="0dp"
            style="@style/TextInputField"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            style="@style/TextInputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:imeOptions="actionNext"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/repeatPasswordEditText"
            style="@style/TextInputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:imeOptions="actionDone"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

        <TextView
            android:id="@+id/authErrorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_general"
            android:fontFamily="@font/noto_serif_regular"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/font_tiny"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/repeatPasswordEditText" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_general"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/authErrorTextView">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/maleRadioButton"
                style="@style/TextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/male"
                android:textSize="@dimen/font_small" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/femaleRadioButton"
                style="@style/TextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/female"
                android:textSize="@dimen/font_small" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/MaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_general"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/genderRadioGroup" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_huge"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/signUpButton" />

        <com.linc.inphoto.ui.view.LoadingView
            android:id="@+id/loadingView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:translationZ="@dimen/translation_top"
            app:blurOverlayColor="@color/black_25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>