<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.linc.inphoto.ui.view.EditorToolbarView
        android:id="@+id/editorToolbarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/elevation_general"
        android:paddingHorizontal="@dimen/padding_general"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textTitle="@string/manage_post_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editorToolbarView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/elevation_general"
            android:layout_marginTop="@dimen/margin_general"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/postImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_general" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tagsTextView"
                style="@style/TextFieldBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:textSize="@dimen/font_small" />

            <com.linc.inphoto.ui.view.TagsEditText
                android:id="@+id/tagsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_general" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTextView"
                style="@style/TextFieldBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_general"
                android:text="@string/description"
                android:textSize="@dimen/font_small" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/descriptionEditText"
                style="@style/TextInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>